lab3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
  namespace: default
  labels:
    app: hello-app
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
